feat: add error treatment

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
         <button class="search__button btn" [disabled]="search.length <= 2" type="submit">Buscar</button>
       </form>
 
-      <div class="profile ms-5 w-25 pt-2 pb-2 d-flex justify-content-center align-items-center flex-nowrap">
+      <div class="profile ms-0 mt-3 mb-2 w-25 pt-2 pb-2 d-flex justify-content-center align-items-center flex-nowrap ms-lg-5 mt-lg-0 mb-lg-0">
         <p class="navbar-profile__name m-0 me-2">Ver perfil </p>  
         <fa-icon [icon]="faArrowRight"></fa-icon>
       </div>
