--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,11 +1,22 @@
 <main class="posts col-12 mt-2">
+   
     <ng-template [ngIf]="loading">
-
         <div class="loading">
             <img class="loading__img" src="../../../assets/GIFS/loading-ampulheta.gif" alt="">
             <p>Carregando publicações ...</p>
+            <p class="moreTenSeconds" *ngIf="moreTenSeconds">Ei, é um servidor gratuito, as requisições podem demorar um pouco...</p>
         </div>
     </ng-template>
+
+
+    <ng-template [ngIf]="getPostsError">
+        <div class="error">
+            <img class="error__img img-fluid" src="../../../assets/images/face_error.png" alt="">
+            <p>Ocorreu um erro ao buscar as publicações por favor tente mais tarde!</p>            
+        </div>
+    </ng-template>
+
+
 
     <div class="posts__container col-12">
         <blog-post *ngFor="let post of posts" [post]=post></blog-post>
