--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -1,11 +1,12 @@
 
 <div class="contents container d-flex pt-5 pb-5">
     <div class="contents__left col-xxl-2 col-xl-2 col-lg-3 d-none d-lg-block d-xl-block d-xxl-block pb-3">
-        <blog-previews *ngIf="!searching && !selectedAnotherPost" ></blog-previews>
+        <blog-previews [isPostsError]="isPostsError" *ngIf="!searching && !selectedAnotherPost" ></blog-previews>
     </div>
 
     <div class="contents__center col-xxl-7 col-xl-7 col-lg-9 col-12 ps-0 p-0 ps-lg-3 pe-lg-3 ">
-        <blog-new-post *ngIf="!searching && !filterByCategory && !selectedAnotherPost"></blog-new-post>
+        <blog-new-post  [isPostsError]="isPostsError" *ngIf="!searching && !filterByCategory && !selectedAnotherPost"></blog-new-post>
+
         <p *ngIf="searching" class=" search mb-0">Filtrando por: <i>{{search.trim()}}</i></p>
         <a *ngIf="searching" (click)="undoFilter(true)"> Desfazer</a> 
 
@@ -15,11 +16,11 @@
         <p *ngIf="selectedAnotherPost" class=" search mb-0">Mostrando publicação selecionada em 'Outras publicações'.</p>
         <a *ngIf="selectedAnotherPost" (click)="undoFilter(true)"> Desfazer</a> 
 
-        <blog-posts (postEmitter)="receivePosts($event)"></blog-posts>    
+        <blog-posts (postErrorEmitter)="receiveError($event)" (postEmitter)="receivePosts($event)"></blog-posts>    
     </div>
 
     <div class="contents__right col-xxl-3 col-xl-3 d-none d-xl-block d-xxl-block pb-3">
-        <blog-another-posts  [Anotherposts]="Anotherposts"></blog-another-posts>
+        <blog-another-posts [isPostsError]="isPostsError"  [Anotherposts]="Anotherposts"></blog-another-posts>
 
         <div class="announcement" blogPointer *ngIf="!searching && !filterByCategory && !selectedAnotherPost">
             <blog-announcement></blog-announcement>
