--- a/src/app/components/previews/previews.component.html
+++ b/src/app/components/previews/previews.component.html
@@ -1,4 +1,4 @@
 <div class="previews col-12" >
     <blog-perfil></blog-perfil>
-    <blog-categories *ngIf="!isPostsError"></blog-categories>
+    <blog-categories *ngIf="!isPostsError && Anotherposts.length != 0"></blog-categories>
 </div>
