--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -1,7 +1,7 @@
 
 <div class="contents container d-flex pt-5 pb-5">
     <div class="contents__left col-xxl-2 col-xl-2 col-lg-3 d-none d-lg-block d-xl-block d-xxl-block pb-3">
-        <blog-previews [isPostsError]="isPostsError" *ngIf="!searching && !selectedAnotherPost" ></blog-previews>
+        <blog-previews [isPostsError]="isPostsError" [Anotherposts]="Anotherposts" *ngIf="!searching && !selectedAnotherPost" ></blog-previews>
     </div>
 
     <div class="contents__center col-xxl-7 col-xl-7 col-lg-9 col-12 ps-0 p-0 ps-lg-3 pe-lg-3 ">
