--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -8,7 +8,7 @@
                     </div>
                 </div>
                 <div class="post__header__description col-10 bg-white">
-                    Wendell Rodrigues Amaral
+                    {{post.author}}
                     <br>
                     <span class="post__header__occupation">
                         Desenvolvedor web
