feat: create login screen

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,3 @@
-<h1>ANALISAR COMO IMPLEMENTAR AS SERVICES PARA AUTENTICAÇÃO, GUARDA DE ROTA E CLASSE QUE SALVA NO LOCA STORAGE</h1>
+<div> 
+    <router-outlet></router-outlet>
+</div>
