--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary p-2" >
   <div class="container">
-    <a class="navbar-brand" routerLink="/">
-      <span>Dev</span>_Blog
-    </a>
+   <blog-logo></blog-logo>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
